# tsr1000

./: .gitignore  CMakeLists.txt  resources.qrc
qml/: ConnectionMenu.qml  Tsr1000ControlPanel.qml  Tsr1000StatusModel.qml  Tsr1000Visualizer.qml
qml/gifs/: TSR1000.xcf
src/: CMakeLists.txt  main.cpp
src/devicemanager/: devicemanager.cpp
src/sensor/: CMakeLists.txt  ping360.cpp  protocoldetector.cpp  tsr1000.cpp  tsr1000.h
src/waterfall/: waterfallplot.cpp
